--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-swiftclient (1:1.1.1-1) unstable; urgency=low
+python-swiftclient (1:1.1.1-1) experimental; urgency=low
 
   * Initial debian release (Closes #687415)
 
