--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-swiftclient (1:1.2.0+git1-2be776c2-1) experimental; urgency=low
+python-swiftclient (1:1.2.0+git1.2be776c2-1) experimental; urgency=low
 
   * New snapshot release 
   * Add depend on python-keystoneclient
