--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ python-swiftclient (1:1.2.0+git1.2be776c2-1) experimental; urgency=low
 
   * New snapshot release 
   * Add depend on python-keystoneclient
+  * Now using openstack-pkg-tools for the debian/rules.
 
  -- Thomas Goirand <zigo@debian.org>  Mon, 17 Dec 2012 14:39:57 +0000
 
