--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:1.3.0-1) experimental; urgency=low
+
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Wed, 03 Apr 2013 19:26:10 +0800
+
 python-swiftclient (1:1.2.0+git1.2be776c2-1) experimental; urgency=low
 
   * New snapshot release 
