--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-swiftclient (1:1.4.0-1) unstable; urgency=low
+
+  * New upstream release.
+  * Uploading to unstable.
+
+ -- Thomas Goirand <zigo@debian.org>  Mon, 13 May 2013 10:25:04 +0000
+
 python-swiftclient (1:1.3.0-1) experimental; urgency=low
 
   * New upstream release.
