Ran wrap-and-sort.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:1.4.0-2) UNRELEASED; urgency=low
+
+  * Ran wrap-and-sort.
+
+ -- Thomas Goirand <zigo@debian.org>  Thu, 30 May 2013 14:10:59 +0800
+
 python-swiftclient (1:1.4.0-1) unstable; urgency=low
 
   * New upstream release.
