--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 python-swiftclient (1:1.4.0-2) UNRELEASED; urgency=low
 
   * Ran wrap-and-sort.
+  * Fixed a typo in the short description (Closes: #710546) thanks to Pascal
+    De Vuyst for reporting it.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 30 May 2013 14:10:59 +0800
 
