--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-swiftclient (1:1.4.0-2) UNRELEASED; urgency=low
+python-swiftclient (1:1.4.0-2) unstable; urgency=low
 
   * Ran wrap-and-sort.
   * Fixed a typo in the short description (Closes: #710546) thanks to Pascal
