--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:1.6.0-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Wed, 11 Sep 2013 14:03:08 +0800
+
 python-swiftclient (1:1.4.0-2) unstable; urgency=low
 
   * Ran wrap-and-sort.
