--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-swiftclient (1:1.6.0-1) unstable; urgency=low
 
   * New upstream release.
+  * Removes now obsolete patch for OSLO version.
 
  -- Thomas Goirand <zigo@debian.org>  Wed, 11 Sep 2013 14:03:08 +0800
 
