--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ python-swiftclient (1:1.6.0-1) unstable; urgency=low
   * Removes now obsolete patch for OSLO version.
   * Now using testrepository for the unit testing.
   * Updated (build-)dependencies.
+  * Canonical VCS URLs.
 
  -- Thomas Goirand <zigo@debian.org>  Wed, 11 Sep 2013 14:03:08 +0800
 
