--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:1.8.0-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Tue, 11 Feb 2014 23:31:15 +0800
+
 python-swiftclient (1:1.6.0-2) unstable; urgency=low
 
   * Added missing build-depends: python-d2to1.
