--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-python-swiftclient (1:1.8.0-1) UNRELEASED; urgency=low
+python-swiftclient (1:2.0.2-1) unstable; urgency=high
 
-  * New upstream release.
+  * New upstream release (Closes: #730626).
   * Reviewed build-dependency for the new upstream release.
   * Standards-Version: is now 3.9.5.
 
- -- Thomas Goirand <zigo@debian.org>  Tue, 11 Feb 2014 23:31:15 +0800
+ -- Thomas Goirand <zigo@debian.org>  Tue, 18 Feb 2014 11:03:09 +0800
 
 python-swiftclient (1:1.6.0-2) unstable; urgency=low
 
