--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:2.0.2-2) UNRELEASED; urgency=medium
+
+  * debian/watch: Use github tags.
+
+ -- Thomas Bechtold <toabctl@debian.org>  Sun, 30 Mar 2014 12:42:46 +0200
+
 python-swiftclient (1:2.0.2-1) unstable; urgency=high
 
   * New upstream release (Closes: #730626).
