--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:2.3.0-2) unstable; urgency=medium
+
+  * Uploading to unstable.
+
+ -- Thomas Goirand <zigo@debian.org>  Fri, 17 Oct 2014 23:52:32 +0800
+
 python-swiftclient (1:2.3.0-1) experimental; urgency=medium
 
   [ Thomas Bechtold ]
