--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:2.4.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Sun, 19 Apr 2015 19:12:15 +0200
+
 python-swiftclient (1:2.3.1-1) unstable; urgency=medium
 
   * New upstream release.
