Added Python3 support.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ python-swiftclient (1:2.4.0-1) experimental; urgency=medium
 
   * New upstream release.
   * Fixed (build-)depends for this release.
+  * Added Python 3 support.
 
  -- Thomas Goirand <zigo@debian.org>  Sun, 19 Apr 2015 19:12:15 +0200
 
