--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-swiftclient (1:2.3.1-2) UNRELEASED; urgency=medium
+python-swiftclient (1:2.3.1-2) unstable; urgency=medium
 
   * Added missing python-pkg-resources depends (Closes: #789685).
 
