--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-swiftclient (1:2.4.0-3) UNRELEASED; urgency=medium
+
+  * Added Breaks: + Replaces: of python-swiftclient in python-swiftclient-doc
+    because the -doc package now contains the swift man page (Closes: #789668).
+
+ -- Thomas Goirand <zigo@debian.org>  Fri, 26 Jun 2015 15:44:59 +0200
+
 python-swiftclient (1:2.4.0-2) experimental; urgency=medium
 
   * Added dependency on python-pkg-resources (Closes: #789685).
