--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-swiftclient (1:2.4.0-4) UNRELEASED; urgency=medium
+
+  * Blacklist test_multithreading.TestOutputManager.test_printers which fails
+    under Jessie.
+
+ -- Thomas Goirand <zigo@debian.org>  Wed, 08 Jul 2015 09:41:54 +0200
+
 python-swiftclient (1:2.4.0-3) experimental; urgency=medium
 
   * Added Breaks: + Replaces: of python-swiftclient in python-swiftclient-doc
