--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
 python-swiftclient (1:2.4.0-4) UNRELEASED; urgency=medium
 
-  * Blacklist test_multithreading.TestOutputManager.test_printers which fails
-    under Jessie.
+  * d/p/multithreading-fixes.patch: Cherry pick fixes related to py3
+    unit test failures from upstream VCS.
 
- -- Thomas Goirand <zigo@debian.org>  Wed, 08 Jul 2015 09:41:54 +0200
+ -- James Page <james.page@ubuntu.com>  Fri, 10 Jul 2015 09:13:06 +0100
 
 python-swiftclient (1:2.4.0-3) experimental; urgency=medium
 
