--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:2.6.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Corey Bryant <corey.bryant@canonical.com>  Thu, 24 Sep 2015 14:54:41 -0400
+
 python-swiftclient (1:2.4.0-5) experimental; urgency=medium
 
   * Team upload.
