--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-swiftclient (1:2.6.0-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * d/control: Align dependencies and versions with upstream.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Thu, 24 Sep 2015 14:54:41 -0400
 
