--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-swiftclient (1:2.6.0-2) UNRELEASED; urgency=medium
+python-swiftclient (1:2.6.0-2) unstable; urgency=medium
 
   [ Ivan Udovichenko ]
   * d/control: Remove unnecessary dependency - python-simplejson [1].
@@ -7,7 +7,10 @@ python-swiftclient (1:2.6.0-2) UNRELEASED; urgency=medium
   [ James Page ]
   * d/py3dist-overrides: Ignore futures requirement for py3.
 
- -- Ivan Udovichenko <iudovichenko@mirantis.com>  Mon, 28 Sep 2015 20:10:24 +0300
+  [ Thomas Goirand ]
+  * Uploading to unstable.
+
+ -- Thomas Goirand <zigo@debian.org>  Thu, 15 Oct 2015 22:47:42 +0000
 
 python-swiftclient (1:2.6.0-1) experimental; urgency=medium
 
