--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:2.6.0-3) unstable; urgency=medium
+
+  * override_dh_python3 to fix Py3 shebang.
+
+ -- Thomas Goirand <zigo@debian.org>  Fri, 23 Oct 2015 23:53:41 +0000
+
 python-swiftclient (1:2.6.0-2) unstable; urgency=medium
 
   [ Ivan Udovichenko ]
