--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:2.7.0-2) UNRELEASED; urgency=medium
+
+  * Watch file fixed
+
+ -- Ondřej Nový <novy@ondrej.org>  Fri, 22 Jan 2016 11:57:55 -0500
+
 python-swiftclient (1:2.7.0-1) experimental; urgency=medium
 
   [ Ondřej Nový ]
