--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-swiftclient (1:2.7.0-2) UNRELEASED; urgency=medium
 
   * Watch file fixed
+  * Debian tests: Test Python3 version of swift CLI
 
  -- Ondřej Nový <novy@ondrej.org>  Fri, 22 Jan 2016 11:57:55 -0500
 
