--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ python-swiftclient (1:2.7.0-2) experimental; urgency=medium
 
   [ Ondřej Nový ]
   * Watch file fixed.
-  * Debian tests: Test Python3 version of swift CLI.
+  * Debian tests fixies.
   * Standards-Version is 3.9.7 now (no change).
   * Fixed Vcs URLs.
 
