Fixed hardcoded Python 2.7 version when running unit tests

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:2.7.0-3) UNRELEASED; urgency=medium
+
+  * Fixed hardcoded Python 2.7 version when running unit tests
+
+ -- Ondřej Nový <novy@ondrej.org>  Wed, 23 Mar 2016 06:19:13 +0100
+
 python-swiftclient (1:2.7.0-2) experimental; urgency=medium
 
   [ Ondřej Nový ]
