--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-python-swiftclient (1:2.7.0-3) UNRELEASED; urgency=medium
+python-swiftclient (1:2.7.0-3) unstable; urgency=medium
 
+  * Uploading to unstable
   * Fixed hardcoded Python 2.7 version when running unit tests
 
- -- Ondřej Nový <novy@ondrej.org>  Wed, 23 Mar 2016 06:19:13 +0100
+ -- Ondřej Nový <novy@ondrej.org>  Mon, 04 Apr 2016 18:56:07 +0200
 
 python-swiftclient (1:2.7.0-2) experimental; urgency=medium
 
