--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+python-swiftclient (1:3.0.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+  * Removed python(3)-testtools build dependency
+  * Removed patch
+    Stop-passing-attr-to-keystoneclient-when-there-s-no-filter_value.patch
+    (Applied upstream)
+
+ -- Ondřej Nový <novy@ondrej.org>  Tue, 05 Apr 2016 18:15:50 +0200
+
 python-swiftclient (1:2.7.0-3) unstable; urgency=medium
 
   * Uploading to unstable
