--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:3.0.0-3) UNRELEASED; urgency=medium
+
+  * Standards-Version is 3.9.8 now (no change)
+
+ -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:31:13 +0200
+
 python-swiftclient (1:3.0.0-2) unstable; urgency=medium
 
   * Added git to Build-Depends-Indep
