--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-swiftclient (1:3.0.0-3) UNRELEASED; urgency=medium
 
   * Standards-Version is 3.9.8 now (no change)
+  * Change directory to $ADTTMP before running Debian tests
 
  -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:31:13 +0200
 
