--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-python-swiftclient (1:3.0.0-3) UNRELEASED; urgency=medium
+python-swiftclient (1:3.0.0-3) unstable; urgency=medium
 
   * Standards-Version is 3.9.8 now (no change)
   * Change directory to $ADTTMP before running Debian tests
   * d/copyright: Changed source URL to https protocol
   * Changed -doc depends from ${python3:Depends} to ${sphinxdoc:Depends}
 
- -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:31:13 +0200
+ -- Ondřej Nový <novy@ondrej.org>  Thu, 02 Jun 2016 16:36:56 +0200
 
 python-swiftclient (1:3.0.0-2) unstable; urgency=medium
 
