--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:3.0.0-4) UNRELEASED; urgency=medium
+
+  * Use OSLO_PACKAGE_VERSION from openstack-pkg-tools
+
+ -- Ondřej Nový <novy@ondrej.org>  Tue, 14 Jun 2016 17:25:19 +0200
+
 python-swiftclient (1:3.0.0-3) unstable; urgency=medium
 
   * Standards-Version is 3.9.8 now (no change)
