--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ python-swiftclient (1:3.0.0-4) UNRELEASED; urgency=medium
   * Use OSLO_PACKAGE_VERSION from openstack-pkg-tools
   * d/{control,copyright}: Use my @debian.org email address
   * Removed git from Build-Depends-Indep
+  * Fixed executable flags for debian/* files
 
  -- Ondřej Nový <novy@ondrej.org>  Tue, 14 Jun 2016 17:25:19 +0200
 
