--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-swiftclient (1:3.0.0-4) UNRELEASED; urgency=medium
+python-swiftclient (1:3.0.0-4) unstable; urgency=medium
 
   * Use OSLO_PACKAGE_VERSION from openstack-pkg-tools
   * d/{control,copyright}: Use my @debian.org email address
@@ -6,7 +6,7 @@ python-swiftclient (1:3.0.0-4) UNRELEASED; urgency=medium
   * Fixed executable flags for debian/* files
   * Use autopkgtest-pkg-python testsuite
 
- -- Ondřej Nový <novy@ondrej.org>  Tue, 14 Jun 2016 17:25:19 +0200
+ -- Ondřej Nový <onovy@debian.org>  Sat, 03 Sep 2016 11:33:07 +0200
 
 python-swiftclient (1:3.0.0-3) unstable; urgency=medium
 
