--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ python-swiftclient (1:3.1.0-1) UNRELEASED; urgency=medium
 
   * New upstream release
   * Bumped required version of python-keystoneclient
+  * Bumped required version of python-oslosphinx
 
  -- Ondřej Nový <onovy@debian.org>  Sat, 03 Sep 2016 11:36:37 +0200
 
