--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-python-swiftclient (1:3.1.0-1) UNRELEASED; urgency=medium
+python-swiftclient (1:3.1.0-1) experimental; urgency=medium
 
   * New upstream release
   * Bumped required version of python-keystoneclient
   * Bumped required version of python-oslosphinx
 
- -- Ondřej Nový <onovy@debian.org>  Sat, 03 Sep 2016 11:36:37 +0200
+ -- Ondřej Nový <onovy@debian.org>  Sat, 03 Sep 2016 11:54:41 +0200
 
 python-swiftclient (1:3.0.0-4) unstable; urgency=medium
 
