--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:3.1.0-2) UNRELEASED; urgency=medium
+
+  * d/s/options: extend-diff-ignore of .gitreview
+
+ -- Ondřej Nový <onovy@debian.org>  Fri, 23 Sep 2016 16:34:08 +0200
+
 python-swiftclient (1:3.1.0-1) experimental; urgency=medium
 
   * New upstream release
