--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 python-swiftclient (1:3.1.0-2) unstable; urgency=medium
 
+  * Uploading to unstable
   * d/s/options: extend-diff-ignore of .gitreview
   * d/control: Using OpenStack's Gerrit as VCS URLs.
 
