--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-swiftclient (1:3.1.0-3) UNRELEASED; urgency=medium
 
   * Bumped debhelper version to 10
+  * d/copyright: Fixed Apache-2 license text
 
  -- Ondřej Nový <onovy@debian.org>  Thu, 17 Nov 2016 16:42:11 +0100
 
