--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ python-swiftclient (1:3.1.0-3) UNRELEASED; urgency=medium
 
   * Bumped debhelper version to 10
   * d/copyright: Fixed Apache-2 license text
+  * Require futures only for Python 2
+    (Added upstream patch, closes: #849453)
+  * Bump required version of python-concurrent.futures,
+    python{,3}-pkg-resources and python{,3}-setuptools
 
  -- Ondřej Nový <onovy@debian.org>  Thu, 17 Nov 2016 16:42:11 +0100
 
