--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-swiftclient (1:3.1.0-4) UNRELEASED; urgency=medium
+
+  * d/control + d/gbp.conf: Change branch to debian/ocata
+
+ -- Ondřej Nový <onovy@debian.org>  Sun, 26 Feb 2017 10:59:30 +0100
+
 python-swiftclient (1:3.1.0-3) unstable; urgency=medium
 
   * Bumped debhelper version to 10
